--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Noto+Color+Emoji&family=Sacramento&display=swap');
+
 body{
-    background: rgb(61, 227, 245);
+    /* background: #FBE7C6; */
+    background-color: black;
+    overflow: hidden;
+}
+#container{
+    height: 80vh;
+    width: 60vw;
+    background-color: #A0E7E5;
+    margin: auto;
+    margin-top: 10vh;
+    padding: 40px;
+    border-radius: 50px;
+    box-sizing: border-box;
+    box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.50),
+                22px 22px 40px rgba(0, 0, 0, 0.30);
+}
+
+
+.title-icon{
+    font-family: "Noto Color Emoji", sans-serif;
+}
+.title-text{
+    font-size: 3em;
+    font-family: "Sacramento", cursive;
+    font-style: normal;
+    font-weight: 800;
+    text-align: center;
+}
+
+.detail-text{
+    font-family:"Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 2em;
+}
+
+.button-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    margin-top: 10%;
+}
+
+.button{
+    height: 60px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: 500;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    border: 2px solid;
+    border-radius: 150px;
+    cursor: pointer;
+    background-color: #8155BA;
+    border-left-color: #8155BA;
+    border-top-color: #8155BA;
+    border-right-color: #4a447a;
+    border-bottom-color: #4a447f;
+    box-shadow: 2px 2px #4aaa7f,
+                4px 4px #3a0fe0,
+                6px 6px #27af29;
+    transition: 0.3s;
+}
+.button:hover{
+    background-color: #E42256;
+}
+.button:active{
+    box-shadow: none;
+    border: none;
+    transform: translate(50%,50%);
+}
+
+#sendEmailButton{
+    background-color: #8155BA;
+    transform:translateX(-125%);
+}
+#sendEmailButton:hover{
+    background-color: #E42256;
 }
 
 .random-element{
-    height: 50px;
-    width: 50px;
-    background-color: blueviolet;
+    background-color: #FF45B5;
+    transition: all 0.5s;
+    transition-timing-function: cubic-bezier(.7,-0.87,0,1.55);
+    border-color: #b0307d;
     position: absolute;
-    transition: all 1s ease-out;
+
+    transform:translateX(125%);
+}
+.random-element:active{
+    background-color: #E42256;
+    border-color: #E42256;
+    box-shadow: none;
+    border: none;
 }
 
+
+
+@media only screen and (max-width: 767px) {
+    #container{
+        width: 80vw;
+        margin-top: auto;
+        padding: 20px;
+    }
+    .title-text{
+        font-size: 2em;
+    }
+    .detail-text{
+        font-size: 1.5em;
+    }
+    .button{
+        font-size: 1.5em;
+        height: 40px;
+        width: 65px;
+    }
+}
+
+/* Floating Icons styles */
+.floating-icons{
+	position:absolute;
+	font-size:50px;
+	animation:move 3s linear;
+	-webkit-animation:move 3s linear;
+	-moz-animation:move 3s linear;
+	-o-animation:move 3s linear;
+	-ms-animation:move 3s linear;
+	animation-fill-mode: forwards;
+}
+@keyframes move {
+	0%{transform:scale(0)}
+	50%{transform:scale(1);opacity:0;}
+	100%{transform:scale(1);opacity:0;}
+} 
+@-webkit-keyframes move {
+	0%{transform:scale(0)}
+	50%{transform:scale(1);opacity:0;}
+	100%{transform:scale(1);opacity:0;}
+}
+@-moz-keyframes move {
+	0%{transform:scale(0)}
+	50%{transform:scale(1);opacity:0;}
+	100%{transform:scale(1);opacity:0;}
+} 
+@-ms-keyframes move {
+	0%{transform:scale(0)}
+	50%{transform:scale(1);opacity:0;}
+	100%{transform:scale(1);opacity:0;}
+}
+@-o-keyframes move {
+	0%{transform:scale(0)}
+	50%{transform:scale(1);opacity:0;}
+	100%{transform:scale(1);opacity:0;}
+}
