--- a/public/style.css
+++ b/public/style.css
@@ -43,7 +43,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 .button{
@@ -103,31 +103,12 @@ body{
 }
 
 
-
-@media only screen and (max-width: 767px) {
-    #container{
-        width: 80vw;
-        margin-top: auto;
-        padding: 20px;
-    }
-    .title-text{
-        font-size: 2em;
-    }
-    .detail-text{
-        font-size: 1.5em;
-    }
-    .button{
-        font-size: 1.5em;
-        height: 40px;
-        width: 65px;
-    }
-}
-
 /* Floating Icons styles */
 .floating-icons{
 	position:absolute;
 	font-size:50px;
 	animation:move 3s linear;
+    pointer-events: none;
 	-webkit-animation:move 3s linear;
 	-moz-animation:move 3s linear;
 	-o-animation:move 3s linear;
@@ -159,3 +140,59 @@ body{
 	50%{transform:scale(1);opacity:0;}
 	100%{transform:scale(1);opacity:0;}
 }
+
+#dateForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+}
+#dateForm .input-box{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#dateForm .input-box label,#dateForm .input-box input {
+    display: block;
+}
+.detail-text-input{
+    font-size: 1.25em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
+    border: 2px solid black;
+    border-radius: 0.25em;
+    height: max-content;
+}
+#messageInput{
+    transform: translateY();
+}
+
+@media only screen and (max-width: 767px) {
+    #container{
+        width: 80vw;
+        margin-top: auto;
+        padding: 20px;
+    }
+    .title-text{
+        font-size: 2em;
+    }
+    .detail-text{
+        font-size: 1.25em;
+    }
+    .button{
+        font-size: 1.25em;
+        height: 40px;
+        width: 65px;
+    }
+    .detail-text-input{
+        font-size: 1em;
+    }
+}
+
+/* #wrapper1{
+    display: none;
+} */
